Replace sqlite with android room ORM Converters: Add type converters for UUID and Date objects. UUID to string and vice versa. and Date to long and vice versa. Task: add entity annotation and other room annotations such as primarykey. TaskDao: task data access object. methods needed to work with database TaskDataBase: abstract class that extends roomdatabase connects entities and dao TaskFragment: now that we are using room use objects instead of id TaskListFragment: now that we are using room use objects instead of id TaskManager: clean up old sql code and update for room Grade: add room dependencies and add maven url other: remove old sqlite code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,11 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    //room dependencies
+    def room_version = "2.1.0-alpha04"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 }
