--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,9 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+    def work_version = "1.0.0"
+    // (Java only)
+    implementation "android.arch.work:work-runtime:$work_version"
+    // optional - Test helpers
+    androidTestImplementation "android.arch.work:work-testing:$work_version"
 }
